--- a/cwebassets-pc/ckeditor/plugins/easyimage/styles/easyimage.css
+++ b/cwebassets-pc/ckeditor/plugins/easyimage/styles/easyimage.css
@@ -10,6 +10,7 @@ For licensing, see LICENSE.md or https://ckeditor.com/legal/ckeditor-oss-license
 	display: block;
 	padding: 0;
 	clear: both;
+	max-width: 100%;
 }
 
 /*
@@ -59,7 +60,7 @@ body.cke_editable > .cke_widget_wrapper_easyimage-side {
 
 .cke_widget_wrapper_easyimage-align-left, :not(.cke_widget_wrapper_easyimage):not(.cke_widget_wrapper_easyimage-align-left) > .easyimage-align-left {
 
-	margin-right: 1.5em;
+	/* margin-right: 1.5em; */
 }
 
 .cke_widget_wrapper_easyimage-align-center, :not(.cke_widget_wrapper_easyimage):not(.cke_widget_wrapper_easyimage-align-center) > .easyimage-align-center {
